# lidar_sync_xl

./: PROJECT_SUMMARY.md  QUICKSTART.md  workspace.sh
install/: local_setup.sh  setup.sh
install/multi_lidar_sync/include/multi_lidar_sync/: lidar_types.hpp
install/multi_lidar_sync/lib/multi_lidar_sync/: multi_lidar_sync_node
install/multi_lidar_sync/share/multi_lidar_sync/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/multi_lidar_sync/share/multi_lidar_sync/config/: lidar_config.yaml  params.yaml
install/multi_lidar_sync/share/multi_lidar_sync/launch/: multi_lidar_sync.launch.py
log/: latest_build
scripts/: check_lidar_sync.py
src/multi_lidar_sync/: CMakeLists.txt  README.md  package.xml
src/multi_lidar_sync/config/: lidar_config.yaml  params.yaml
src/multi_lidar_sync/include/multi_lidar_sync/: lidar_buffer_manager.hpp  lidar_processor.hpp  multi_lidar_processor.hpp
src/multi_lidar_sync/launch/: multi_lidar_sync.launch.py
src/multi_lidar_sync/src/: lidar_buffer_manager.cpp  lidar_processor.cpp  multi_lidar_processor.cpp  multi_lidar_sync_node.cpp
